<resources>
    <string name="app_name">TallerListView</string>
    <string name="opciones">Opciones</string>
    <string name="areas">Areas</string>
    <string name="volumenes">Volumenes</string>
    <string name="oprealizadas">Operaciones realizadas</string>
    <string-array name="itemsList">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/oprealizadas</item>
        <item>@string/salir</item>
    </string-array>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>
    <string name="valorLadoCuadrado">Valor del Lado: </string>
    <string name="ingreseLado">Lado: </string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="errorVacio">Por favor ingrese un valor.</string>
    <string name="errorNegativo">Por favor ingrese un valor positivo.</string>
    <string-array name="areaslist">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
        <item>@string/regresar</item>
    </string-array>
    <string name="resultado">Resultado</string>
    <string name="areaC">El area es de:</string>
    <string name="continuar">Continuar</string>
    <string name="regresar">Regresar</string>
    <string name="salir">Salir</string>
    <string name="base">Base</string>
    <string name="ingreseBase">Base: </string>
    <string name="ingreseAltura">Altura: </string>
    <string name="errorBase">Ingrese un valor en Base</string>
    <string name="errorAltura">Ingrese un valor en Altura</string>
    <string name="ingreseRadio">Radio: </string>
    <string name="errorRadio">Ingrese un valor en Radio</string>
    <string-array name="volList">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
        <item>@string/regresar</item>
    </string-array>
    <string name="esfera">Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string name="volR">El volumen es de:</string>
    <string name="ladoCaraCubo">Lado: </string>
    <string name="errorCubo">Por favor, ingrese un valor en longitud</string>
    <string name="salirMensaje">¿Desea salir de la aplicación?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="nombreOp">Nombre operacion</string>
    <string name="datos">Datos</string>
    <string name="Resultado">Resultado</string>
    <string name="hAreaCuadrado">Area del Cuadrado</string>
    <string name="hAreaRectangulo">Area del Rectangulo</string>
    <string name="hAreaTriangulo">Area del Triangulo</string>
    <string name="hAreaCirculo">Area del Circulo</string>
    <string name="hVolEsfera">Volumen Esfera</string>
    <string name="hVolCilindro">Volumen Cilindro</string>
    <string name="hVolCono">Volumen Cono</string>
    <string name="hVolCubo">Volumen Cubo</string>
</resources>
