<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Rectangulo">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rectangulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@android:color/background_light" />

    <EditText
        android:id="@+id/txtBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingreseBase"
        android:inputType="numberDecimal" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@android:color/background_light" />

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingreseAltura"
        android:inputType="numberDecimal" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@android:color/background_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="borrar"
            android:text="@string/limpiar" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="regresar"
            android:text="@string/regresar" />
    </LinearLayout>

</LinearLayout>